Fix for "Homepage card view: 3rd line of headline is partially visible on Nexus 7"

--- a/assets/scss/components/cards/main.scss
+++ b/assets/scss/components/cards/main.scss
@@ -25,12 +25,12 @@ $alphaville-card__color--yellow-tint3: #b35400;
 }
 
 .alphaville-card__heading-truncate {
-	max-height: 60px;
+	max-height: 56px;
 	overflow: hidden;
 }
 
 .alphaville-card__heading-truncate--3lines {
-	max-height: 90px;
+	max-height: 84px;
 	overflow: hidden;
 }
 
